#+
#:  \file       NEWS
#:  \brief      \$Id$
#:  
#:  (C) 2007 - NHI - #1 - Project - Group
#:  
#:  \version    \$Rev$
#:  \author     EMail: aotto1968 at users.berlios.de
#:  \attention  this software has GPL permissions to copy
#:              please contact AUTHORS for additional information
#:

2 Feb 2013: v NHI1-0.17, PLMK-2.5 und libmsgque-5.5

 -> ...


8 Apr 2011: v NHI1-0.16, PLMK-2.4 und libmsgque-5.4

 -> this release change the build-environement on windows
    from Visual-X-Express to cygwin/mingw

 -> read more at README_windows


15 Mar 2011: v NHI1-0.15, PLMK-2.4 und libmsgque-5.4

 -> "Update windows support"


27 Feb 2011: v NHI1-0.14, PLMK-2.3 und libmsgque-5.3

 -> "SqLite, a deeper integration including a 'Storage' API"

This release add persistent-transaction-support-part-2. The 'Storage'
API was added to store/retrieve a data-package from/to the database.
In addition a 'Dump' API was added to export/import data into/from
external storage.

The following commands were A)dded / D)eleted / C)hanged:

  D SqlSetDb,
  A StorageOpen
  A StorageClose
  A StorageInsert
  A StorageSelect
  A StorageDelete
  A StorageCount
  A StorageService
  A ReadDUMP
  A ReadLOAD
  A ReadForward
  D ReadBDY
  D SendBDY
  A ConfigSetStorage
  A ConfigGetStorage


05 Feb 2011: v NHI1-0.13, PLMK-2.2 und libmsgque-5.2

 -> "SqLite, one additional step in the right direction"

This release add persistent-transaction-support-part-1 and an improved factory-interface.
In addition some code/documentation errors were fixed.

The following commands were A)dded / D)eleted / C)hanged:

  A SqlSetDb,
  A FactoryCtxGet
  A FactoryCtxSet
  D FactoryCtxDefaultSet
  C FactoryNew
  C FactoryAdd
  C FactoryDefault
  A FactoryCopy
  A FactoryGet
  A FactoryGetCalled
  C SendT_START
  C SendT_END
  C ReadT_START


20 Jan 2010: v NHI1-0.12, PLMK-2.1 and libmsgque-5.1

This release embed "sqlite" support into the PLMK kernel.
As first step only the memory management is used.

